--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -31,6 +31,9 @@
             <h3>Secure&nbsp;Software &bull;&nbsp;Strong&nbsp;Teams &bull;&nbsp;DotNet&nbsp;Core &bull;&nbsp;ASP.NET &bull;&nbsp;SQL Server</h3>
         </div>
     </div>
+    <div class="page-topnav">
+        <a href="/">Home</a> &bull; <a href="/contact">Contact</a> 
+    </div>
 
     <div class="container">
         <header class="row">
