Add like/share buttons

--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:description" content="Secure Software, Strong Teams" />
-    <meta property="og:image" content="{{ site.url }}{{ page.ogImage | default: " /images/dwalker.jpg " }}" />
+    <meta property="og:image" content="{{ site.url }}{{ page.ogImage | default: "/images/david-walker.png" }}" />
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
           crossorigin="anonymous">
@@ -44,6 +44,8 @@
                 {{content}}
             </section>
             <section class="col-md-2 grax-navigation-pane">
+                <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fgrax.com%2F&width=96&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId=2187203368212843" width="96" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+
                 <a href="/">Home</a><br />
                 <a href="/improve/your/life">Improve Your Life</a><br />
                 <a href="/improve/your/team">Improve Your Team</a><br />
