--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -44,7 +44,7 @@
                 {{content}}
             </section>
             <section class="col-md-2 grax-navigation-pane">
-                <iframe src="https://www.facebook.com/plugins/like.php?href={{ page.url || absolute_url || uri_escape }}%2F&width=96&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId=2187203368212843" width="96" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                <iframe src="https://www.facebook.com/plugins/like.php?href={{ page.url || absolute_url || url_encode }}%2F&width=96&layout=button&action=like&size=small&show_faces=true&share=true&height=65&appId=2187203368212843" width="96" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                 <br />
                 <a href="/">Home</a><br />
                 <a href="/improve/your/life">Improve Your Life</a><br />
