--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -30,6 +30,13 @@ h3 {
     padding: 5px 15px;
 }
 
+i.date {
+    font-weight: 500;
+    font-style: italic;
+    background-color: orange;
+    border: 1px solid gray;
+}
+
 @media screen {
     .resume-container {
         border: 1px solid #EEEEEE;
