--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -37,6 +37,7 @@ i {
     border: 1px solid gray;
     display: block;
     padding-left: 3px;
+    padding-right: 3px;
     width: max-content;
 }
 
