--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"
         crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/resume.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/resume.css?{{ site.github.build_revision }}">
 
     <title>{{ page.title }}</title>
 </head>
