--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@
 
 <body>
     <div class="page-header">
-        <img class="page-header-main-image" src="/images/lizardleaf.jpg" alt="Photo by David Walker" />
+        <img class="page-header-main-image" src="/images/redleaf.jpg" alt="Photo by David Walker" />
         <img class="page-header-author-image" src="/images/david-walker.png" alt="David Walker" />
         <div class="page-header-text">
             <h1>David Walker</h1>
