--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -24,7 +24,9 @@
 
 <body>
     <div class="page-header">
-        <a href="/"><img class="page-header-main-image" src="/images/redleaf.jpg" alt="Photo by David Walker" /></a>
+        <div class="page-header-main-image-crop">
+            <a href="/"><img class="page-header-main-image" src="/images/redleaf.jpg" alt="Photo by David Walker" /></a>
+        </div>
         <img class="page-header-author-image" src="/images/david-walker.png" alt="David Walker" />
         <div class="page-header-text">
             <h1>David Walker</h1>
