--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,44 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="jekyll-build-time" content="{{ site.time }}" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/2019.css">
-    <style type="text/css">
-        .project-table th {
-            white-space: nowrap;
-        }
-
-        .project-table td {
-            border: 1px solid lightgray;
-            margin: 0;
-            padding: 3px;
-        }
-
-        .cia-tagline {
-            font-weight: bold;
-            font-size: 1.4em;
-            border-bottom: 2px solid black;
-            margin-bottom: 4px;
-            display: none;
-        }
-
-            .cia-tagline .fa-lock {
-                color: rgb(178,23,23);
-            }
-
-            .cia-tagline .fa-edit {
-                color: rgb(23,47,128);
-            }
-
-            .cia-tagline .fa-arrow-up {
-                color: rgb(30,181,47);
-            }
-    </style>
-    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="/stylesheets/home.css" />
+    {% include headers.html %}
 </head>
 
 <body>
@@ -67,8 +31,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-    {% include google-analytics.html %}
 </body>
-
 </html>
