missing a single character

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,7 +2,7 @@
 
 <head>
     {% include headers.html %}
-    {% assign sitePages = site.pages }
+    {% assign sitePages = site.pages %}
 </head>
 
 <body class="container">
