--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -17,9 +17,6 @@
             <h3>Secure&nbsp;Software &bull;&nbsp;Strong&nbsp;Teams &bull;&nbsp;DotNet&nbsp;Core &bull;&nbsp;ASP.NET &bull;&nbsp;SQL Server</h3>
         </div>
     </div>
-    <div class="page-topnav">
-        <a href="/">Home</a> &bull; <a href="/contact">Contact</a>
-    </div>
 
     <div class="container">
         <header class="row">
@@ -31,6 +28,7 @@
             </section>
             <section class="col-md-2 grax-navigation-pane">
                 <a href="/">Home</a><br />
+                <a href="/contact">Contact</a><br />
                 <a href="/improve/your/life">Improve Your Life</a><br />
                 <a href="/improve/your/team">Improve Your Team</a><br />
                 <a href="/improve/your/code">Improve Your Code</a><br />
