--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -17,9 +17,6 @@
             <h3>Secure&nbsp;Software &bull;&nbsp;Strong&nbsp;Teams &bull;&nbsp;DotNet&nbsp;Core &bull;&nbsp;ASP.NET &bull;&nbsp;SQL Server</h3>
         </div>
     </div>
-    <div class="page-topnav">
-        <a href="/">Home</a> &bull; <a href="/contact">Contact</a>
-    </div>
 
     <div class="container">
         <header class="row">
@@ -31,6 +28,7 @@
             </section>
             <section class="col-md-2 grax-navigation-pane">
                 <a href="/">Home</a><br />
+                <a href="/contact">Contact</a><br />
                 <a href="/improve/your/life">Improve Your Life</a><br />
                 <a href="/improve/your/team">Improve Your Team</a><br />
                 <a href="/improve/your/code">Improve Your Code</a><br />
@@ -42,8 +40,6 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-            crossorigin="anonymous"></script>
+    {% include trailing-scripts.html %}
 </body>
 </html>
